# simple-html-parser

./: Cargo.toml
src/: main.rs
src/core/: mod.rs
src/core/interfaces/: html_element.rs  mod.rs  node.rs  text_element.rs
src/core/parser/: attribute.rs  error.rs  mod.rs  node.rs  tag.rs
src/interfaces/: mod.rs
src/parser/: attribute.rs  node.rs  tag.rs
